[package]
name = "repo_cmd"
version = "0.1.0"
authors = ["takagiy <takagiy.4dev@gmail.com>"]
edition = "2018"

description = "A CLI tool to obtain the GitHub repository's full name, url, etc. from the name of the repository"
license = "MIT"
repository = "https://github.com/takagiy/repo_cmd"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10.4", features = ["json", "blocking"] }
serde = { version = "1.0.106", features = ["derive"] }
strum = "0.18.0"
strum_macros = "0.18.0"
anyhow = "1.0.28"
thiserror = "1.0.16"

[[bin]]
name = "repo"
path = "src/main.rs"
